# knowledge-pipeline

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  run_pipeline.sh
config/: categories.yaml  platforms.yaml
config/prompts/: classify.txt  humanize.txt  quality.txt
src/: classifier.py  dedup.py  generate_images.py  humanizer.py  main.py  quality.py  utils.py  writer.py
src/scrapers/: base.py  bilibili.py  utils.py  wechat_sogou.py  zhihu.py
tests/: test_dedup.py  test_quality.py  test_utils.py
