[project]
name = "knowledge-pipeline"
version = "0.1.0"
description = "景一知识付费内容聚合Pipeline — 多平台抓取 → 分类 → 去重 → 质量过滤 → 去AI味改写 → Obsidian输出"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
kp = "src.main:main"
kp-images = "src.generate_images:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
